# hanley_bot

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build_linux_release.sh  build_win_debug.cmd  conanfile.txt  schemas.sql
src/: boost_json.cpp  bot.cpp  bot.h  bot_commands.cpp  bot_commands.h  config.h  config_json_reader.cpp  config_json_reader.h  currency_extension.cpp  currency_extension.h  domain.cpp  domain.h  logging.cpp  logging.h  main.cpp  main_course_form.cpp  main_course_form.h  registration_form.cpp  registration_form.h  sdk.h  state_base.h  state_machine.cpp  state_machine.h  state_machine_base.h  states_controller.cpp  states_controller.h  tg_debug.cpp  tg_debug.h  tg_utils.cpp  tg_utils.h
